@@ -36,7 +36,7 @@ import zip.ootd.ootdzip.comment.domain.Comment;
 import zip.ootd.ootdzip.comment.repository.CommentRepository;
 import zip.ootd.ootdzip.common.exception.CustomException;
 import zip.ootd.ootdzip.common.response.CommonSliceResponse;
-import zip.ootd.ootdzip.oauth.domain.UserAuthenticationToken;
+import zip.ootd.ootdzip.oauth.OAuthUtils;
 import zip.ootd.ootdzip.ootd.domain.Ootd;
 import zip.ootd.ootdzip.ootd.repository.OotdRepository;
 import zip.ootd.ootdzip.ootdimage.domain.OotdImage;
@@ -372,7 +372,7 @@ public class CommentServiceTest extends IntegrationTestSupport {
         Ootd ootd = Ootd.createOotd(user,
                 content,
                 isPrivate,
-                Arrays.asList(ootdImage),
+            List.of(ootdImage),
                 Arrays.asList(ootdStyle, ootdStyle1));
 
         return ootdRepository.save(ootd);
@@ -409,10 +409,10 @@ public class CommentServiceTest extends IntegrationTestSupport {
     }
 
     private void makeAuthenticatedUserBy(User user) {
-        UserAuthenticationToken.UserDetails principal = new UserAuthenticationToken.UserDetails(user.getId());
         SecurityContext securityContext = SecurityContextHolder.createEmptyContext();
-        Authentication authentication = new UserAuthenticationToken(principal);
+        Authentication authentication = OAuthUtils.createJwtAuthentication(user);
         securityContext.setAuthentication(authentication);
+
         SecurityContextHolder.setContext(securityContext);
     }
 
